# mcp-trace

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE.md  README.md  demo_mcp_flow.sh  dist-workspace.toml  docker-compose.yml  flake.nix  index.html  mcp-probe.sh  mcp-trace.sh  mcpdebug.sh  requirements.txt  run.sh  run_test.sh
.github/workflows/: nix-ci.yml  pages.yml  release-nixpkgs-reminder.yml  update-flake.yml
mcp-common/: Cargo.toml
mcp-common/src/: ipc.rs  lib.rs  mcp.rs  messages.rs  types.rs
mcp-common/tests/: ipc_integration_tests.rs  ipc_tests.rs  mcp_tests.rs  messages_tests.rs  mod.rs  types_tests.rs
mcp-monitor/: Cargo.toml
mcp-monitor/src/: app.rs  lib.rs  main.rs  ui.rs
mcp-monitor/tests/: app_tests.rs
mcp-probe/: Cargo.toml
mcp-probe/src/: main.rs
mcp-proxy/: Cargo.toml
mcp-proxy/src/: buffered_ipc_client.rs  lib.rs  main.rs  proxy.rs  stdio_handler.rs
mcp-proxy/tests/: buffered_ipc_client_tests.rs  stdio_handler_tests.rs
mcp-trace/: Cargo.toml
mcp-trace/src/: main.rs
mcpdebug/: Cargo.toml
mcpdebug/src/: main.rs
nixpkgs/: package.nix
src/: main.py
test-mcp-server/: README.md  demo.py  run_tests.sh  simple_demo.py  test_client.py  test_server.py
tests/: Cargo.toml  lib.rs
tests/e2e/: full_system_tests.rs  mod.rs
