[package]
name = "mcp-proxy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mcp-proxy"
path = "src/main.rs"

[dependencies]
mcp-common = { path = "../mcp-common" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }