[package]
name = "mcp-proxy"
version = "0.1.0"
edition = "2021"

[package.metadata.dist]
dist = false

[[bin]]
name = "mcp-proxy"
path = "src/main.rs"

[dependencies]
mcp-common = { path = "../mcp-common" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
assert_matches = "1.5"