[package]
name = "mcp-trace-e2e-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
mcp-common = { path = "../mcp-common" }
mcp-proxy = { path = "../mcp-proxy" }
mcp-monitor = { path = "../mcp-monitor" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tempfile = "3.0"

[[test]]
name = "e2e_tests"
path = "e2e/mod.rs"